/*
 * This file is part of Project Hybrasyl.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the Affero General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful, but
 * without ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
 * or FITNESS FOR A PARTICULAR PURPOSE. See the Affero General Public License
 * for more details.
 *
 * You should have received a copy of the Affero General Public License along
 * with this program. If not, see <http://www.gnu.org/licenses/>.
 *
 * (C) 2020 ERISCO, LLC 
 *
 * For contributors and individual authors please refer to CONTRIBUTORS.MD.
 * 
 */

syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "HybrasylGrpc";

service Patron {
  rpc Auth (AuthRequest) returns (BooleanMessageReply) {}
  rpc ResetPassword (ResetPasswordRequest) returns (BooleanMessageReply) {}
  rpc BeginShutdown (BeginShutdownRequest) returns (BooleanMessageReply) {}
  rpc TotalUserCount (google.protobuf.Empty) returns (UserCountReply) {}
  rpc IsShutdownComplete (google.protobuf.Empty) returns (BooleanMessageReply) {}
}

message BeginShutdownRequest {
	int32 Delay = 1;
}

message BooleanMessageReply {
	bool Success = 1;
	string Message = 2;
}

message UserCountReply {
	int32 Number = 1;
}

message AuthRequest {
  string Username = 1;
  string Password = 2;
}

message ResetPasswordRequest {
  string Username = 1;
  string NewPassword = 2;
}